--- a/index.html
+++ b/index.html
@@ -9,15 +9,63 @@
 <body>
     <header> Наш топчик</header>
     <div class="topchik">
-        <div class="fankiL">
+        <div class="product">
             <img src="https://rnr.ua/storage/2024/12/01/26d337ad128143becbd6935d8ab8a0b4/responsive-images/26971172522560687646___medium_webp_416_368.webp" alt="Фанкі L" class = "fankiLimg">
             <p><span class="sale">-16%</span> <span class="priceNoSale">639₴</span></p>
-            <p><span class="priceNow">539₴</span> <img src="https://rnr.ua/img/icons-content/logo_mark.svg" alt="рнр" class="icon"> <span class="bonus">+27₴ бонусів</span></p>
+            <div class="line1">
+                <p class="priceNow">539₴<p>
+                <img src="https://rnr.ua/img/icons-content/logo_mark.svg" alt="рнр" class="icon"> 
+                <p class="bonus">+27₴ бонусів</p>
+            </div>
             <p class="name">Фанкі L</p>
             <p class="description"> Ебі рол - 4 шт, Каліфорнія з тигровою креветкою, Рол Фенікс з...</p>
-            
             <div class="line">
                 <p class="weight">690 г | 24 шт</p>
+                <img src="https://rnr.ua/img/icons/black-cart.svg" alt="В корзину" class="cart">
+            </div>
+        </div>
+
+        <div class="product">
+            <img src="https://rnr.ua/storage/2024/12/01/84fb6e76d3067f394ac5f8c0adff35f4/responsive-images/26973173073288776379___medium_webp_416_368.webp" alt="Фанкі L" class = "fankiLimg">
+            <p><span class="sale">-17%</span> <span class="priceNoSale">839₴</span></p>
+            <div class="line1">
+                <p class="priceNow">699₴<p>
+                <img src="https://rnr.ua/img/icons-content/logo_mark.svg" alt="рнр" class="icon"> 
+                <p class="bonus">+35₴ бонусів</p>
+            </div>            <p class="name">Фанкі XL</p>
+            <p class="description"> Філадельфія - 4 шт., Сніговий краб, Мідл рол з тунцем, Філадельфія з...</p>
+            <div class="line">
+                <p class="weight">1020 г | 32 шт</p>
+                <img src="https://rnr.ua/img/icons/black-cart.svg" alt="В корзину" class="cart">
+            </div>
+        </div>
+
+        <div class="product">
+            <img src="https://rnr.ua/storage/2024/12/01/428d920e2ca59b21330d3a43834893f9/responsive-images/26974172522781180168___medium_webp_416_368.webp" alt="Фанкі L" class = "fankiLimg">
+            <p><span class="sale">-20%</span> <span class="priceNoSale">1249₴</span></p>
+            <div class="line1">
+                <p class="priceNow">999₴<p>
+                <img src="https://rnr.ua/img/icons-content/logo_mark.svg" alt="рнр" class="icon"> 
+                <p class="bonus">+50₴ бонусів</p>
+            </div>            <p class="name">Фанкі XXL</p>
+            <p class="description"> Ебі рол - 4 шт, Філадельфія - 4 шт., Філадельфія з тигровою креветкою...</p>
+            <div class="line">
+                <p class="weight">1400 г | 50 шт</p>
+                <img src="https://rnr.ua/img/icons/black-cart.svg" alt="В корзину" class="cart">
+            </div>
+        </div>
+
+        <div class="product">
+            <img src="https://rnr.ua/storage/2024/12/01/041600c64184a2f1b15f3c1fc37e6d07/responsive-images/26878172717576043525___medium_webp_416_368.webp" alt="Фанкі L" class = "fankiLimg">
+            <p><span class="sale">-12%</span> <span class="priceNoSale">749₴</span></p>
+            <div class="line1">
+                <p class="priceNow">659₴<p>
+                <img src="https://rnr.ua/img/icons-content/logo_mark.svg" alt="рнр" class="icon"> 
+                <p class="bonus">+33₴ бонусів</p>
+            </div>            <p class="name">Вініл L</p>
+            <p class="description"> Макі з Печеним Лососем Вітелло Тонато, Мідл рол в темпурі, Рол...</p>
+            <div class="line">
+                <p class="weight">1120 г | 40 шт</p>
                 <img src="https://rnr.ua/img/icons/black-cart.svg" alt="В корзину" class="cart">
             </div>
         </div>
